Prevent overlapping text at different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
   color: var(--primary-color);
   background-color: white;
 
-  @media (width < 768px) {
+  @media (width < 1001px) {
     font-size: 16px;
   }
 }
@@ -85,7 +85,7 @@ nav#navbar {
   z-index: 1;
   top: 0px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     flex-direction: column;
   }
 }
@@ -111,7 +111,7 @@ button#nav-button {
   color: white;
   border: none;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     display: block;
   }
 }
@@ -119,7 +119,7 @@ button#nav-button {
 img#logo {
   height: 80px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     height: 64px;
   }
 }
@@ -132,7 +132,7 @@ ul#nav-items {
   list-style: none;
   margin: 0px 40px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     display: none;
     flex-direction: column;
     gap: 16px;
@@ -146,7 +146,7 @@ li.nav-item {
   align-items: center;
   gap: 16px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     justify-content: right;
   }
 }
@@ -174,7 +174,7 @@ main#content {
   margin: 64px;
   font-family: SFPro;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     gap: 32px;
     margin: 32px 24px;
   }
@@ -189,7 +189,7 @@ img#banner {
   flex-direction: column;
   gap: 32px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     gap: 20px;
   }
 }
@@ -202,7 +202,7 @@ h1.header {
   letter-spacing: 4px;
   text-align: center;
 
-  @media (width < 768px) {
+  @media (width < 1001px) {
     font-size: 48px;
   }
 }
@@ -214,7 +214,7 @@ h2.subheader {
   color: var(--secondary-color);
   letter-spacing: 2px;
 
-  @media (width < 768px) {
+  @media (width < 1001px) {
     font-size: 24px;
   }
 }
@@ -241,8 +241,11 @@ button.menu-button {
   border: 2px solid var(--secondary-color);
   cursor: pointer;
 
-  @media (width < 768px) {
+  @media (width < 1001px) {
     font-size: 18px;
+  }
+
+  @media (width < 901px) {
     padding: 6px 12px;
   }
 }
@@ -272,7 +275,7 @@ div.menu {
   justify-content: center;
   gap: 64px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     flex-direction: column;
     align-items: center;
     gap: 20px;
@@ -286,7 +289,7 @@ div.menu-column {
 
   width: 480px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     gap: 20px;
     width: 320px;
   }
@@ -309,7 +312,7 @@ b.food-number, .menu-indentation {
   width: 32px;
   color: var(--secondary-color);
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     width: 24px;
   }
 }
@@ -322,7 +325,7 @@ div.price {
 i.menu-note {
   font-size: 16px;
 
-  @media (width < 768px) {
+  @media (width < 1001px) {
     font-size: 14px;
   }
 }
@@ -336,7 +339,7 @@ div#specials {
   justify-content: center;
   gap: 64px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     flex-direction: column;
     gap: 20px;
   }
@@ -359,7 +362,7 @@ div.about-subsection {
   justify-content: center;
   gap: 64px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     flex-direction: column;
     gap: 16px;
   }
@@ -368,7 +371,7 @@ div.about-subsection {
 img.about-photo {
   width: 32%;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     width: 96%;
   }
 }
@@ -379,7 +382,7 @@ div.about-paragraph {
 
   width: 64%;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     width: 100%;
 
     text-align: justify;
@@ -395,7 +398,7 @@ div#contact-information {
   justify-content: center;
   gap: 32px;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     flex-direction: column;
     gap: 16px;
   }
@@ -409,7 +412,7 @@ div.contact-details {
 
   width: 42%;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     width: 100%;
     text-align: center;
   }
@@ -424,7 +427,7 @@ iframe#map {
   aspect-ratio: 1.25;
   border: none;
 
-  @media (width < 768px) {
+  @media (width < 901px) {
     width: calc(100% - 8px);
   }
 }
@@ -437,8 +440,11 @@ footer#footer {
   padding-top: 32px;
   font-size: 18px;
 
-  @media (width < 768px) {
-    padding-top: 16px;
+  @media (width < 1001px) {
     font-size: 14px;
+  }
+
+  @media (width < 901px) {
+    padding-top: 16px;
   }
 }
